Update index.html and changed the comments for better redability

--- a/UI/index.html
+++ b/UI/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <title>Fairalyze AI</title>
-    <!-- Google Fonts -->
+    <!-- included Google Fonts Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-    <!-- Global CSS -->
+    <!-- Included Global CSS -->
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- Page-specific CSS -->
+   
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
@@ -24,22 +24,21 @@
       </div>
     </header>
 
-    <!-- main Section with headline and CTA -->
+    <!-- main Section with headline -->
     <section id="overview" class="main">
       <div class="container main-content">
         <h1>Ensure Fairness in Your AI Models.</h1>
       </div>
     </section>
 
-    <!-- Demo Section: Upload data and show chart -->
+    <!--Section to Upload data and show chart -->
     <section id="upload-section" class="upload-section">
       <div class="container upload-container">
         <h2>Upload Your Dataset.</h2>
         <p>Drag and drop or upload your CSV file.</p>
 
-        <!-- Upload Box with Image Inside -->
+        <!-- Upload/ Drag & Drop box -->
         <div class="upload-box" id="drop-zone">
-          <!-- Make only the image clickable for upload -->
           <label for="fileInput" class="upload-image-label">
             <img src="images/file.png" alt="Upload your datset file" class="upload-image" id="uploadImage" />
 
@@ -77,9 +76,9 @@
       </div>
     </footer>
 
-    <!-- Global JS (Sticky nav, scroll animations, etc.) -->
+    <!-- Global Javascript for Animations-->
     <script src="js/script.js"></script>
-    <!-- Page-specific JS -->
+    <!-- JS of this specific page -->
     <script src="js/index.js"></script>
   </body>
 </html>
