--- a/UI/index.html
+++ b/UI/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
     <!-- Included Global CSS -->
     <link rel="stylesheet" href="css/styles.css" />
-   
+
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
@@ -40,11 +40,9 @@
         <!-- Upload/ Drag & Drop box -->
         <div class="upload-box" id="drop-zone">
           <label for="fileInput" class="upload-image-label">
-            <img src="images/file.png" alt="Upload your datset file" class="upload-image" id="uploadImage" />
-
-            <label>Upload Here...</label>
+            <img src="images/file.png" alt="Upload your dataset file" class="upload-image" id="uploadImage" />
+            <span class="click-up">Click to Upload...</span>
           </label>
-
           <input type="file" id="fileInput" class="file-input" accept=".csv" />
         </div>
 
