Added icons to the navbar list, Modified 'index.html', 'style.css',  and 'index.css'

--- a/UI/index.html
+++ b/UI/index.html
@@ -15,11 +15,11 @@
     <!-- Navigation Bar (Logo and Links) -->
     <header id="navbar" class="navbar">
       <div class="container nav-container">
-        <a href="index.html" class="logo">Fairalyze AI</a>
+        <a href="index.html" class="logo"> <img src="images/logo.png" alt="Logo" class="nav-icons-logo" />Fairalyze AI</a>
         <nav class="nav-links">
-          <a href="index.html#home" class="nav-link">Home</a>
-          <a href="project.html#approach" class="nav-link">Approach</a>
-          <a href="about.html#team" class="nav-link">Team</a>
+          <a href="index.html#home" class="nav-link"> <img src="images/home.png" alt="Home" class="nav-icons" />Home </a>
+          <a href="project.html#approach" class="nav-link"> <img src="images/lists.png" alt="Features" class="nav-icons" />Approach </a>
+          <a href="about.html#team" class="nav-link"> <img src="images/team.png" alt="Teams" class="nav-icons" />Team </a>
         </nav>
       </div>
     </header>
@@ -67,9 +67,9 @@
       <div class="footer-content">
         <p>Made with <span class="love">❤️</span> by Fairalyze AI Team</p>
         <div class="footer-links">
-          <a href="index.html#overview">Home</a>
-          <a href="project.html#approach">Approach</a>
-          <a href="about.html#team">Team</a>
+          <a href="index.html#overview"><img src="images/home1.png" alt="Home" class="nav-icons" />Home</a>
+          <a href="project.html#approach"><img src="images/lists1.png" alt="Features" class="nav-icons" />Approach</a>
+          <a href="about.html#team"><img src="images/team1.png" alt="Teams" class="nav-icons" />Team</a>
         </div>
       </div>
     </footer>
