Updated the content of Project.html

--- a/UI/about.html
+++ b/UI/about.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale =1.0"  />
     <title>Fairalyze AI - About Us</title>
-    <!-- Google Fonts -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
+     <!-- included Google Fonts Poppins -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Global CSS -->
+    <!-- Included Global CSS -->
     <link rel="stylesheet" href="css/styles.css" />
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="css/about.css" />
@@ -18,11 +20,11 @@
     <!-- Navigation Bar (Logo and Links) -->
     <header id="navbar" class="navbar">
       <div class="container nav-container">
-        <a href="index.html" class="logo"> <img src="images/logo1.png" alt="Logo" class="nav-icons-logo" />Fairalyze AI</a>
+        <a href="index.html" class="logo"> <img src="images/logo.png" alt="Logo" class="nav-icons-logo" />Fairalyze AI</a>
         <nav class="nav-links">
           <a href="index.html" class="nav-link"> <img src="images/home.png" alt="Home" class="nav-icons" />Home </a>
           <a href="project.html" class="nav-link"> <img src="images/lists.png" alt="Features" class="nav-icons" />Approach </a>
-          <a href="about.html" class="nav-link"> <img src="images/team2.png" alt="Teams" class="nav-icons" />Team </a>
+          <a href="about.html" class="nav-link"> <img src="images/team.png" alt="Teams" class="nav-icons" />Team </a>
     </div>
     </header>
 
@@ -149,7 +151,7 @@
       </div>
     </section>
 
-    <!-- Footer with links, contact, and credits -->
+
     <!-- Footer with links, contact, and credits -->
     <footer class="footer">
       <div class="footer-content">
@@ -162,9 +164,9 @@
       </div>
     </footer>
 
-    <!-- Global JS (Sticky nav, scroll animations) -->
+    <!-- Global Javascript for Animations-->
     <script src="js/script.js"></script>
-    <!-- Page-specific JS -->
+    <!-- JS of this specific page -->
     <script src="js/about.js"></script>
   </body>
 </html>
