--- a/UI/index.html
+++ b/UI/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <title>Fairalyze AI</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
     <!-- included Google Fonts Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
     <!-- Included Global CSS -->
